--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,11 @@
   <title>Gabriel Cholette-Rioux</title>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta property="og:type" content="Website" />
+  <meta name="image" property="og:image" content="https://gcholette.com/app_img_2.png" />
+  <meta name="author" content="Gabriel Cholette-Rioux" />
+  <meta name="description" property="og:description" content="Gabriel Cholette Rioux personnal website.">
+
   <link rel="shortcut icon" href="favicon.png"/>
   <link rel="manifest" href="manifest.json"/>
   <script src="https://use.fontawesome.com/3ed028459b.js"></script>
@@ -11,7 +16,193 @@
   <style>
     @import url("https://fonts.googleapis.com/css?family=Khand");
 
-    * {
+    .fade-in {
+            opacity: 0;
+            animation-name: fadeIn;
+            -webkit-animation-name: fadeIn;
+            -o-animation-name: fadeIn;
+            -ms-animation-name: fadeIn;
+
+            animation-duration: 1s;
+            -webkit-animation-duration: 1s;
+            -o-animation-duration: 1s;
+            -ms-animation-duration: 1s;
+
+            animation-delay: 500ms;
+            -webkit-animation-delay: 500ms;
+            -o-animation-delay: 500ms;
+            -ms-animation-delay: 500ms;
+
+            -webkit-animation-fill-mode: forwards;
+            -o-animation-fill-mode: forwards;
+            -ms-animation-fill-mode: forwards;
+            animation-fill-mode: forwards;
+    }
+
+    .fade-in5 {
+            opacity: 0;
+            animation-name: fadeIn;
+            -webkit-animation-name: fadeIn;
+            -o-animation-name: fadeIn;
+            -ms-animation-name: fadeIn;
+
+            animation-duration: 4s;
+            -webkit-animation-duration: 4s;
+            -o-animation-duration: 4s;
+            -ms-animation-duration: 4s;
+
+            animation-delay: 1100ms;
+            -webkit-animation-delay: 1100ms;
+            -o-animation-delay: 1100ms;
+            -ms-animation-delay: 1100ms;
+
+            -webkit-animation-fill-mode: forwards;
+            -o-animation-fill-mode: forwards;
+            -ms-animation-fill-mode: forwards;
+            animation-fill-mode: forwards;
+    }
+
+    .fade-in2 {
+            opacity: 0;
+            animation-name: fadeIn;
+            -webkit-animation-name: fadeIn;
+            -o-animation-name: fadeIn;
+            -ms-animation-name: fadeIn;
+
+            animation-duration: 4s;
+            -webkit-animation-duration: 4s;
+            -o-animation-duration: 4s;
+            -ms-animation-duration: 4s;
+
+            animation-delay: 800ms;
+            -webkit-animation-delay: 800ms;
+            -o-animation-delay: 800ms;
+            -ms-animation-delay: 800ms;
+
+            -webkit-animation-fill-mode: forwards;
+            -o-animation-fill-mode: forwards;
+            -ms-animation-fill-mode: forwards;
+            animation-fill-mode: forwards;
+    }
+
+    .fade-in3 {
+            opacity: 0;
+            animation-name: fadeIn;
+            -webkit-animation-name: fadeIn;
+            -o-animation-name: fadeIn;
+            -ms-animation-name: fadeIn;
+
+            animation-duration: 5s;
+            -webkit-animation-duration: 5s;
+            -o-animation-duration: 5s;
+            -ms-animation-duration: 5s;
+
+            animation-delay: 1600ms;
+            -webkit-animation-delay: 1600ms;
+            -o-animation-delay: 1600ms;
+            -ms-animation-delay: 1600ms;
+
+            -webkit-animation-fill-mode: forwards;
+            -o-animation-fill-mode: forwards;
+            -ms-animation-fill-mode: forwards;
+            animation-fill-mode: forwards;
+    }
+
+    .fade-in4 {
+            opacity: 0;
+            animation-name: fadeIn;
+            -webkit-animation-name: fadeIn;
+            -o-animation-name: fadeIn;
+            -ms-animation-name: fadeIn;
+
+            animation-duration: 5s;
+            -webkit-animation-duration: 5s;
+            -o-animation-duration: 5s;
+            -ms-animation-duration: 5s;
+
+            animation-delay: 1900ms;
+            -webkit-animation-delay: 1900ms;
+            -o-animation-delay: 1900ms;
+            -ms-animation-delay: 1900ms;
+
+            -webkit-animation-fill-mode: forwards;
+            -o-animation-fill-mode: forwards;
+            -ms-animation-fill-mode: forwards;
+            animation-fill-mode: forwards;
+    }
+
+    @keyframes fadeIn {
+            0% {opacity:0;}
+            100% {opacity:1;}
+    }
+
+    @-moz-keyframes fadeIn {
+            0% {opacity:0;}
+            100% {opacity:1;}
+    }
+
+    @-webkit-keyframes fadeIn {
+            0% {opacity:0;}
+            100% {opacity:1;}
+    }
+
+    @-o-keyframes fadeIn {
+            0% {opacity:0;}
+            100% {opacity:1;}
+    }
+
+    @-ms-keyframes fadeIn {
+            0% {opacity:0;}
+            100% {opacity:1;}
+    }
+
+    @-webkit-keyframes scale {
+            0% {
+                -webkit-transform: scaleX(0.1);
+            }
+            100% {
+                -webkit-transform: scaleX(1);
+            }
+    }
+
+    @keyframes scale {
+            0% {
+                transform: scaleX(0);
+            }
+            100% {
+                transform: scaleX(1);
+            }
+    }
+
+    @-o-keyframes scale {
+            5% {
+                -o-transform: scaleX(0.1);
+            }
+            100% {
+                -o-transform: scaleX(1);
+            }
+    }
+    @-ms-keyframes scale {
+            5% {
+                -o-transform: scaleX(0.1);
+            }
+            100% {
+                -o-transform: scaleX(1);
+            }
+    }
+    @keyframes grad {
+            0% {
+              background: linear-gradient(to right, #9900ff, #00cc9e);
+            }
+            100% {
+              background: linear-gradient(to right, #0904ff, #303c91);
+            }
+    }
+
+
+
+
+     * {
       -webkit-user-select: none; /* Safari */
       -moz-user-select: none; /* Firefox */
       -ms-user-select: none; /* IE10+/Edge */
@@ -48,6 +239,37 @@
       color: white;
     }
 
+    .bg-anim {
+      background: linear-gradient(to right, #22324a, #351f43);
+        background-size: 150% 150%;
+
+        -webkit-animation: BG 45s ease infinite;
+        -moz-animation: BG 45s ease infinite;
+        -o-animation: BG 45s ease infinite;
+        animation: BG 45s ease infinite;
+    }
+
+    @-webkit-keyframes BG {
+              0%{background-position:10% 61%}
+                50%{background-position:90% 40%}
+                  100%{background-position:10% 61%}
+    }
+    @-moz-keyframes BG {
+              0%{background-position:10% 61%}
+                50%{background-position:90% 40%}
+                  100%{background-position:10% 61%}
+    }
+    @-o-keyframes BG {
+              0%{background-position:10% 61%}
+                50%{background-position:90% 40%}
+                  100%{background-position:10% 61%}
+    }
+    @keyframes BG {
+              0%{background-position:10% 61%}
+                50%{background-position:90% 40%}
+                  100%{background-position:10% 61%}
+    }
+
     body {
       font-family: "Khand";
       color: rgb(236, 236, 236);
@@ -60,8 +282,9 @@
 
     .gradient-line-container {
       height: 45px;
-      max-width: 500px;
+      max-width: 630px;
       margin: 0 auto;
+      animation: scale 3s ease-out;
     }
 
     .gradient-line {
@@ -74,11 +297,36 @@
       box-shadow: 0px 0px 6px #3d5067;
     }
 
+    .grad {
+        background: linear-gradient(85deg, #9900ff, #00cc9e);
+        background-size: 200% 200%;
+
+        -webkit-animation: Grad 10s ease infinite;
+        -moz-animation: Grad 10s ease infinite;
+        animation: Grad 10s ease infinite;
+    }
+
+    @-webkit-keyframes Grad {
+              0%{background-position:0% 51%}
+                50%{background-position:100% 50%}
+                  100%{background-position:0% 51%}
+    }
+    @-moz-keyframes Grad {
+              0%{background-position:0% 51%}
+                50%{background-position:100% 50%}
+                  100%{background-position:0% 51%}
+    }
+    @keyframes Grad {
+              0%{background-position:0% 51%}
+                50%{background-position:100% 50%}
+                  100%{background-position:0% 51%}
+    }
+
 
     .home-container {
       position: relative;
       width: 93%;
-      margin: 22vh auto 0;
+      margin: 19vh auto 0;
     }
 
     .titles {
@@ -171,18 +419,18 @@
 
   </style>
 </head>
-<body>
-<div class="home-container">
+<body class="bg-anim">
+<div class="home-container fade-in">
   <div class="titles">
-    <h1>Gabriel Cholette-Rioux</h1>
-    <p>
+    <h1 class="fade-in2">Gabriel Cholette-Rioux</h1>
+    <p class="fade-in5">
       Passionate software developer
     </p>
   </div>
   <div class="gradient-line-container">
-    <div class="gradient-line"></div>
+    <div class="gradient-line grad"></div>
   </div>
-  <div class="icons">
+  <div class="icons fade-in3">
     <a
         class="fa fa-github"
         href="http://github.com/gcholette"></a>
@@ -190,9 +438,9 @@
         class="fa fa-gitlab"
         href="https://gitlab.com/gcholette"></a>
   </div>
-  <div class="email">
+  <div class="email fade-in4">
     <a href="mailto:solutions@gcholette.com">
-      Solutions@GCholette.com
+      solutions@gcholette.com
     </a>
   </div>
 </div>
