fix: forgot to rename imports

--- a/public/index.html
+++ b/public/index.html
@@ -22,11 +22,11 @@
     <style>
       @font-face {
         font-family: "Khand";
-        src: url("fonts/Khand.ttf");
+        src: url("fonts/khand.ttf");
       }
       @font-face {
         font-family: "localicons";
-        src: url("fonts/Icons.ttf");
+        src: url("fonts/icons.ttf");
       }
 
       [class^="icon-"],
