--- a/public/index.html
+++ b/public/index.html
@@ -186,7 +186,7 @@
         display: inline-block;
       }
 
-      .email a::before :hover {
+      .email a:hover {
         color: #d9d9d9;
         transform: scale(1.1);
         -webkit-transform: scale(1.1);
