--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
       property="og:image"
       content="https://gcholette.com/app_img_2.png"
     />
+    <meta name="keywords" content="gcholette, Gabriel Cholette-Rioux, gcr, Cholette-Rioux">
     <meta name="author" content="Gabriel Cholette-Rioux" />
     <meta
       name="description"
