chore: comment out gitlab icon

--- a/public/index.html
+++ b/public/index.html
@@ -261,7 +261,7 @@
       </div>
       <div class="icons">
         <a class="icon-github" href="http://github.com/gcholette"></a>
-        <a class="icon-gitlab" href="https://gitlab.com/gcholette"></a>
+        <!-- <a class="icon-gitlab" href="https://gitlab.com/gcholette"></a> -->
         <a
           class="icon-linkedin"
           href="https://www.linkedin.com/in/gcholette/"
