add aria-label on icons

--- a/index.html
+++ b/index.html
@@ -260,10 +260,14 @@
         <div class="gradient-line"></div>
       </div>
       <div class="icons">
-        <a class="icon-github" href="http://github.com/gcholette"></a>
-        <!-- <a class="icon-gitlab" href="https://gitlab.com/gcholette"></a> -->
+        <a
+          class="icon-github"
+          href="http://github.com/gcholette"
+          aria-label="Github"
+        ></a>
         <a
           class="icon-linkedin"
+          aria-label="Linkedin"
           href="https://www.linkedin.com/in/gcholette/"
         ></a>
       </div>
