--- a/index.html
+++ b/index.html
@@ -275,5 +275,13 @@
         <a href="mailto:solutions@gcholette.com"> solutions@gcholette.com </a>
       </div>
     </div>
+
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-BZRV88G5RT"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-BZRV88G5RT');
+    </script>
   </body>
 </html>
