feat: update icons, add blog link

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       }
       @font-face {
         font-family: "localicons";
-        src: url("fonts/icons.ttf");
+        src: url("fonts/icons_new.ttf");
       }
 
       [class^="icon-"],
@@ -37,13 +37,13 @@
       }
 
       .icon-github:before {
-        content: "\e900";
+        content: "\e906";
       }
       .icon-linkedin:before {
-        content: "\e901";
+        content: "\e900";
       }
-      .icon-gitlab:before {
-        content: "\e902";
+      .icon-blog:before {
+        content: "\e90a";
       }
 
       :root {
@@ -220,7 +220,7 @@
         color: #895ebc !important;
       }
 
-      .icons .icon-gitlab:hover {
+      .icons .icon-blog:hover {
         color: #4c8adb !important;
       }
 
@@ -269,6 +269,11 @@
           class="icon-linkedin"
           aria-label="Linkedin"
           href="https://www.linkedin.com/in/gcholette/"
+        ></a>
+        <a
+          class="icon-blog"
+          aria-label="Blog"
+          href="https://docs.gcholette.com"
         ></a>
       </div>
       <div class="email">
