chore: aria-label

--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
         ></a>
         <a
           class="icon-blog"
-          aria-label="Blog"
+          aria-label="gcholette blog"
           href="https://docs.gcholette.com"
         ></a>
       </div>
