feat: update favicon.ico

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       property="og:description"
       content="Gabriel Cholette Rioux personnal website."
     />
-    <link rel="shortcut icon" href="favicon.png" />
+    <link rel="shortcut icon" href="favicon.ico" />
     <link rel="manifest" href="manifest.json" />
  
     <style>
